--- a/.classpath
+++ b/.classpath
@@ -8,12 +8,12 @@
 	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
+			<attribute name="test" value="true"/>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
@@ -23,5 +23,10 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/MS20085664/Desktop/commons-lang3-3.12.0/commons-lang3-3.12.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/MS20085664/Desktop/commons-lang3-3.12.0/commons-lang3-3.12.0-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/MS20085664/Desktop/commons-lang3-3.12.0/commons-lang3-3.12.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/MS20085664/Desktop/commons-lang3-3.12.0/commons-lang3-3.12.0-tests.jar"/>
+	<classpathentry kind="lib" path="C:/Users/MS20085664/Desktop/commons-lang3-3.12.0/commons-lang3-3.12.0-test-sources.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
